User fcc link redirected

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,11 @@
 
 package-lock.json
 npm-debug.log*
+
+
+# IDE - VSCode
+.vscode/*
+.vscode/settings.json
+.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
